[package]
name = "simpile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "common_op"
harness = false

[profile.bench]
lto = true
codegen-units = 1

[dependencies]
nix = "0.26.2"

[dev-dependencies]
criterion = "0.5.1"
