[package]
name = "simpile"
version = "0.1.0"
edition = "2021"

[features]
std = ["nix"]
switchable = ["std"]
paranoid = []

[[bench]]
name = "common_op"
harness = false

[profile.bench]
lto = true
codegen-units = 1

[dependencies]
nix = { version = "0.26.2", optional = true }
spin = "0.9.8"

[dev-dependencies]
criterion = "0.5.1"
dlmalloc = { version = "0.2.4", features = ["global"] }
linked_list_allocator = "0.10.5"
